--- a/index.html
+++ b/index.html
@@ -58,32 +58,32 @@
                             <select class="form-select" name="assignee" required>
                                 <option value="" disabled selected>-- Chọn nhân sự --</option>
                                 <optgroup label="⭐ Lãnh đạo Khoa">
-                                    <option value="Nguyễn Thị Hương Giang">DS.CKII Nguyễn Thị Hương Giang</option>
-                                    <option value="Trần Thị Huyền Trang">DS.CKI Trần Thị Huyền Trang</option>
+                                    <option value="Nguyễn Thị Hương Giang">DS.CKI Nguyễn Thị Hương Giang</option>
+                                    <option value="Trần Thị Huyền Trang">DSĐH Trần Thị Huyền Trang</option>
                                 </optgroup>
                                 <optgroup label="💊 Tổ Dược Lâm Sàng">
-                                    <option value="Nguyễn Thị Hương Giang">Nguyễn Thị Hương Giang (Tổ trưởng)</option>
-                                    <option value="Phạm Bá Thương">Phạm Bá Thương</option>
-                                    <option value="Chu Đài Trang">Chu Đài Trang</option>
-                                    <option value="Lê Thị Thanh Nhàn">Lê Thị Thanh Nhàn</option>
+                                    <option value="Nguyễn Thị Hương Giang">DSĐH Nguyễn Thị Hương Giang (Tổ trưởng)</option>
+                                    <option value="Phạm Bá Thương">DSĐH Phạm Bá Thương</option>
+                                    <option value="Chu Đài Trang">DS.CKI Chu Đài Trang</option>
+                                    <option value="Lê Thị Thanh Nhàn">DSĐH Lê Thị Thanh Nhàn</option>
                                 </optgroup>
                                 <optgroup label="📦 Tổ Kho">
-                                    <option value="Nguyễn Duy Tiến">Nguyễn Duy Tiến (Tổ trưởng)</option>
-                                    <option value="Nguyễn Thị Hằng">Nguyễn Thị Hằng</option>
-                                    <option value="Kiều Mạnh Toàn">Kiều Mạnh Toàn</option>
-                                    <option value="Đỗ Thị Nhật Lệ">Đỗ Thị Nhật Lệ</option>
-                                    <option value="Hà Thị Thảo">Hà Thị Thảo</option>
-                                    <option value="Nguyễn Tuấn Thành">Nguyễn Tuấn Thành</option>
-                                    <option value="Nguyễn Thị Thu Hà">Nguyễn Thị Thu Hà</option>
+                                    <option value="Nguyễn Duy Tiến">DSĐH Nguyễn Duy Tiến (Tổ trưởng)</option>
+                                    <option value="Nguyễn Thị Hằng">DSĐH Nguyễn Thị Hằng</option>
+                                    <option value="Kiều Mạnh Toàn">DSĐH Kiều Mạnh Toàn</option>
+                                    <option value="Đỗ Thị Nhật Lệ">DSĐH Đỗ Thị Nhật Lệ</option>
+                                    <option value="Hà Thị Thảo">DS Hà Thị Thảo</option>
+                                    <option value="Nguyễn Tuấn Thành">DS Nguyễn Tuấn Thành</option>
+                                    <option value="Nguyễn Thị Thu Hà">DSĐH Nguyễn Thị Thu Hà</option>
                                 </optgroup>
                                 <optgroup label="📊 Tổ Thống kê - Nghiệp vụ">
-                                    <option value="Trần Thị Huyền Trang">Trần Thị Huyền Trang (Tổ trưởng)</option>
-                                    <option value="Vũ Thị Hồng Hạnh">Vũ Thị Hồng Hạnh</option>
+                                    <option value="Trần Thị Huyền Trang">DSĐH Trần Thị Huyền Trang (Tổ trưởng)</option>
+                                    <option value="Vũ Thị Hồng Hạnh">DSĐH Vũ Thị Hồng Hạnh</option>
                                 </optgroup>
                                 <optgroup label="🚚 Tổ Cung ứng">
-                                    <option value="Nguyễn Thị Hương Giang">Nguyễn Thị Hương Giang</option>
-                                    <option value="Trần Thị Huyền Trang">Trần Thị Huyền Trang</option>
-                                    <option value="Lê Thị Thanh Nhàn">Lê Thị Thanh Nhàn</option>
+                                    <option value="Nguyễn Thị Hương Giang">DS.CKI Nguyễn Thị Hương Giang</option>
+                                    <option value="Trần Thị Huyền Trang">DSĐH Trần Thị Huyền Trang</option>
+                                    <option value="Lê Thị Thanh Nhàn">DSĐH Lê Thị Thanh Nhàn</option>
                                 </optgroup>
                             </select>
                         </div>
